--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
     
     <link rel="icon" href="assets/favicon.png">
 
-    <meta name="apple-mobile-web-app-title" content="scorekeeper">
+    <meta name="apple-mobile-web-app-title" content="Digu League">
     <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152.png">
 
-    <meta name="twitter:description" content="scorekeeper: A simple way to track scores for board and card games">
+    <meta name="twitter:description" content="Digu League: A simple way to track scores for card games">
     <meta name="twitter:image:src" content="/assets/scorekeeper.jpg">
     <meta property="og:title" content="scorekeeper" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/scorekeeper.jpg" />
-    <meta property="og:description" content="scorekeeper: A simple way to track scores for board and card games">
+    <meta property="og:description" content="Digu League: A simple way to track scores for board and card games">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
 
     
     <link rel="stylesheet" type="text/css" href="assets/scorekeeper-0.0.11.css" />
@@ -42,7 +44,7 @@
         <div class="navbar-header">
           <div class="navbar-brand">
             <a href ui-sref="home">
-              scorekeeper
+              Digu LeaGue
             </a>
           </div>
         </div>
@@ -72,11 +74,11 @@
 
     <main ui-view="main"></main>
 
-    <footer class="footer">
+    <footer class="footer" align="center">
       <div class="container">
         <div class="footer-inner">
             </a>
-            (c) 2018.
+            &copy; 2018.
             <a href="mailto:blog@anday.me">And4yy</a>
             <br />
 <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#b84646', 'W7W68ZFP');kofiwidget2.draw();</script> 
