--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 		navigator.serviceWorker.register('service-worker.js');
 	}
 	</script>
-    
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MRX5VPQ');</script>
+<!-- End Google Tag Manager -->
     <link rel="icon" href="assets/favicon.png">
 
     <meta name="apple-mobile-web-app-title" content="Digu League">
@@ -38,6 +44,10 @@
     <script type="text/javascript" src="assets/scorekeeper-0.0.11.js"></script>
   </head>
   <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MRX5VPQ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <header>
       <nav class="navbar navbar-static-top navbar-inverse">
         <div class="container">
