--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header>
-      <nav class="navbar navbar-static-top navbar-inverse">
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
         <div class="navbar-header">
           <div class="navbar-brand">
