--- a/index.html
+++ b/index.html
@@ -50,32 +50,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-        <div class="navbar-header">
-          <div class="navbar-brand">
-            <a href ui-sref="home">
-              Digu LeaGue
-            </a>
-          </div>
-        </div>
-          <ul class="nav navbar-nav">
-            <li ui-sref-active="active">
-              <a href ui-sref="players">
-                <i class="fa fa-user"></i>
-                <span class="nav-label">Players</span>
-              </a>
-            </li>
-            <li ui-sref-active="active">
-              <a href ui-sref="scores">
-                <i class="fa fa-pencil-square-o"></i>
-                <span class="nav-label">Scores</span>
-              </a>
-            </li>
-            <li ui-sref-active="active">
-              <a href ui-sref="games">
-                <i class="fa fa-trophy"></i>
-                <span class="nav-label">Games</span>
-              </a>
+      Eid Mubaaraku Fayaz!!!!
+	    ޑިކު ކިންގް ފަޔާޒް
             </li>
           </ul>
         </div>
