--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="footer-inner">
             </a>
             &copy; 2018.
-            <a href="mailto:blog@anday.me">And4yy</a>
+            <a href="mailto:blog@anday.me">And4yy</a> Thank you
             <br />
 <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#b84646', 'W7W68ZFP');kofiwidget2.draw();</script> 
           </p>
